...
                                <rect key="frame" x="0.0" y="542" width="600" height="58"/>
                                <color key="backgroundColor" red="0.11764705882352941" green="0.082352941176470587" blue="0.16470588235294117" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="58" id="srk-XK-LgT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Choose Photo">
                                    <color key="titleColor" red="0.38823529411764707" green="0.80000000000000004" blue="0.792156862745098" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="choosePhotoTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="zov-9d-WdT"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="0.0" y="426" width="600" height="58"/>
                                <color key="backgroundColor" red="0.1176470588" green="0.08235294118" blue="0.1647058824" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="58" id="w30-wT-7wQ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                <state key="normal" title="Take Photo">
                                    <color key="titleColor" red="0.38823529410000002" green="0.80000000000000004" blue="0.79215686269999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="takePhotoTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="cHk-ut-IbG"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HTn-rM-Hog">
                                <rect key="frame" x="543" y="15" width="37" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="f4N-W1-iep"/>
                                    <constraint firstAttribute="width" constant="37" id="hqw-kb-i8V"/>
                                </constraints>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="doneButtonClicked" destination="VU7-1M-a8V" eventType="touchUpInside" id="v1c-EC-p3Y"/>
                                </connections>
                            </button>
...
